# file-box

./: .gitignore  Makefile  README.md  docker-compose.yaml  file_config.json  pyproject.toml
file_box/: api.py  catalog.py  db_utils.py  file_utils.py  pipeline.py  service.py  settings.py  steps.py  tables.py
file_box/configs/: model.py
migrations/: env.py
migrations/versions/: 2025_03_26_1654-ed498479cd8c_init.py  2025_03_27_1402-ae10ccc53339_feat_init.py  2025_03_28_1307-bc6b3b34f251_feat_init.py  2025_04_24_1534-b7d94b6311d7_del_generate_path_step.py  2025_04_24_1709-5e2c16453495_filedata_meta.py
tests/: conftest.py  service_test.py
